// Database Schema DBML - Little Joy Florist Jakarta

Table users {
  id bigint [pk, increment]
  name varchar
  email varchar [unique]
  phone varchar
  password varchar
  role varchar [note: "admin, operator, customer"]
  address text
  is_active boolean [default: true]
  email_verified_at timestamp
  remember_token varchar
  created_at timestamp
  updated_at timestamp
}

Table categories {
  id bigint [pk, increment]
  name varchar
  slug varchar [unique]
  description text
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Table products {
  id bigint [pk, increment]
  category_id bigint [ref: > categories.id]
  name varchar
  slug varchar [unique]
  description text
  price decimal(12,2)
  stock integer
  image_path varchar
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table carts {
  id bigint [pk, increment]
  user_id bigint [ref: - users.id, unique]
  created_at timestamp
  updated_at timestamp
}

Table cart_items {
  id bigint [pk, increment]
  cart_id bigint [ref: > carts.id]
  product_id bigint [ref: > products.id]
  quantity integer
  unit_price decimal(12,2)
  subtotal decimal(12,2)
  created_at timestamp
  updated_at timestamp
}

Table orders {
  id bigint [pk, increment]
  order_number varchar [unique]
  user_id bigint [ref: > users.id]
  order_date timestamp
  delivery_date date
  recipient_name varchar
  recipient_phone varchar
  delivery_address text
  greeting_message text
  customer_note text
  operator_note text
  subtotal decimal(12,2)
  delivery_fee decimal(12,2)
  total decimal(12,2)
  payment_status varchar [note: "pending, waiting_verification, verified, rejected"]
  order_status varchar [note: "pending_payment, waiting_verification, paid, processing, ready, shipped, completed, cancelled, rejected"]
  cancelled_at timestamp
  completed_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table order_items {
  id bigint [pk, increment]
  order_id bigint [ref: > orders.id]
  product_id bigint [ref: > products.id]
  product_name varchar
  unit_price decimal(12,2)
  quantity integer
  subtotal decimal(12,2)
  created_at timestamp
  updated_at timestamp
}

Table payments {
  id bigint [pk, increment]
  order_id bigint [ref: - orders.id, unique]
  payment_method varchar
  destination_bank varchar
  sender_bank varchar
  account_holder_name varchar
  amount decimal(12,2)
  transfer_date date
  proof_path varchar
  verification_status varchar [note: "pending, waiting_verification, verified, rejected"]
  verified_by bigint [ref: > users.id]
  verified_at timestamp
  rejection_note text
  created_at timestamp
  updated_at timestamp
}

Table order_status_histories {
  id bigint [pk, increment]
  order_id bigint [ref: > orders.id]
  previous_status varchar
  current_status varchar
  note text
  changed_by bigint [ref: > users.id]
  created_at timestamp
  updated_at timestamp
}

Table stock_movements {
  id bigint [pk, increment]
  product_id bigint [ref: > products.id]
  movement_type varchar [note: "in, out, adjustment"]
  quantity integer
  stock_before integer
  stock_after integer
  reference_type varchar
  reference_id bigint
  note text
  created_by bigint [ref: > users.id]
  created_at timestamp
  updated_at timestamp
}
